--- a/templates/storage/dropbox/authorization_url.erb
+++ b/templates/storage/dropbox/authorization_url.erb
@@ -1,5 +1,5 @@
 
-Visit the following URL to authorize your Dropbox App with Backup:
+Visit the following URL to authorize your Dropbox App with BackupII:
 
   <%= @session.get_authorize_url %>
 
