--- a/templates/storage/dropbox/authorized.erb
+++ b/templates/storage/dropbox/authorized.erb
@@ -1,4 +1,4 @@
 
-Backup has successfully been authorized!
+BackupII has successfully been authorized!
 Writing session cache file to:
 <%= @cached_file %>
